# Statistics-calculator

./: Author.txt  CMakeLists.txt  README.md  Solutions inside code.txt  Special Solutions.txt  Types inside code.txt  Types of problems.txt  main.cpp
clean-clone/: .gitignore  LICENSE
external_alglib/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  dataanalysis.cpp  diffequations.cpp  fasttransforms.cpp  integration.cpp  interpolation.cpp  kernels_avx2.cpp  kernels_fma.cpp  kernels_sse2.cpp  linalg.cpp  solvers.cpp  specialfunctions.cpp  statistics.cpp
